--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "PromptForge - Gerador de Prompts",
     "short_name": "PromptForge",
-    "description": "Gerador de Prompts Profissionais para Estampas de Camisetas",
+    "description": "Gerador de Prompts Profissionais",
     "start_url": "./index.html",
     "display": "standalone",
     "background_color": "#1a1a2e",
@@ -9,18 +9,16 @@
     "orientation": "portrait-primary",
     "icons": [
         {
-            "src": "icon-192.png",
+            "src": "./icon-192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "icon-512.png",
+            "src": "./icon-512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any maskable"
         }
-    ],
-    "categories": ["productivity", "utilities"],
-    "lang": "pt-BR"
+    ]
 }
